--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: auth-depl
-spec: 
+spec:
   replicas: 1
   selector:
     matchLabels:
@@ -15,6 +15,12 @@ spec:
       containers:
         - name: auth
           image: us.gcr.io/encoded-ensign-333210/auth
+          env:
+            - name: JWT_KEY #name to be referenced
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY #name with which it was created
 ---
 apiVersion: v1
 kind: Service
