--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,7 +7,7 @@ deploy:
 build:
   # local:
   #   push: false
-  googleCloudBuild: 
+  googleCloudBuild:
     projectId: encoded-ensign-333210
   artifacts:
     - image: us.gcr.io/encoded-ensign-333210/auth
@@ -16,5 +16,13 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts'
+          - src: "src/**/*.ts"
+            dest: .
+    - image: us.gcr.io/encoded-ensign-333210/client
+      context: client
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.js"
             dest: .
