--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -34,3 +34,11 @@ build:
         manual:
           - src: "src/**/*.ts"
             dest: .
+    - image: us.gcr.io/encoded-ensign-333210/orders
+      context: orders
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
